if (${ANDROID_ABI} STREQUAL "x86_64")
    include_directories(${ANDROID_SYSROOT}/usr/include/x86_64-linux-android)
elseif (${ANDROID_ABI} STREQUAL "x86")
    include_directories(${ANDROID_SYSROOT}/usr/include/i686-linux-android)
elseif (${ANDROID_ABI} STREQUAL "arm64-v8a")
    include_directories(${ANDROID_SYSROOT}/usr/include/aarch64-linux-android)
elseif (${ANDROID_ABI} STREQUAL "armeabi-v7a")
    include_directories(${ANDROID_SYSROOT}/usr/include/arm-linux-androideabi)
endif()

add_library(client3 SHARED Client.cpp Main.cpp)
find_library(log-lib log)
find_library(dl-lib dl)
find_library(android-lib android)
find_library(EGL-lib EGL)
find_library(GLESv2-lib GLESv2)
target_link_libraries(client3 ${log-lib} ${dl-lib} ${android-lib} ${EGL-lib} ${GLESv2-lib})
SET(CMAKE_CXX_FLAGS "-isystem D:\\Android-others\\Sdk\\ndk\\16.1.4479499\\sysroot\\usr\\include\\arm-linux-androideabi -std=c++11")
