add_library(client SHARED Client.cpp Main.cpp)
find_library(log-lib log)
find_library(dl-lib dl)
find_library(android-lib android)
find_library(EGL-lib EGL)
find_library(GLESv2-lib GLESv2)
find_library(libc++ c++)
target_link_libraries(client ${log-lib} ${dl-lib} ${android-lib} ${EGL-lib} ${GLESv2-lib} ${libc++})
SET(CMAKE_CXX_FLAGS "-O2")
